--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,25 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"/>
         <link rel="stylesheet" href="assets/style.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet"> 
         <script src="assets/index.js"></script>
-        
+        <meta name="description" content="Delhi Hardware Hackers club is DELHI-NCR's coolest Electronic Entusiast club">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
+        <!-- Windows Phone -->
+        <meta name="msapplication-navbutton-color" content="#df0e62">
+        <!-- iOS Safari -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="#df0e62">
+        <meta name="twitter:card" content="summary"></meta>
+        <meta charset="utf-8">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="">
+        <meta property="og:title" content="Delhi Hardware Hackers Club">
+        <meta property="og:image" content="">
+        <meta property="og:description" content="Delhi Hardware Hackers club is DELHI-NCR's coolest Electronic Enthusiast club">
+        <meta property="og:site_name" content="Delhi Hardware Hackers club">
+        <meta property="og:locale" content="en_US">
+        <meta name="theme-color" content="#df0e62">
     </head>
     <body>
         <nav class="navbar" role="navigation" aria-label="main navigation">
