--- a/index.htm
+++ b/index.htm
@@ -29,11 +29,11 @@
     <body>
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-              <a class="navbar-item" href="https://bulma.io">
-                <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+              <a class="navbar-item" href="#">
+                <img src="assets/hw_logo_png.png" >
               </a>
           
-              <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+              <a role="button" class="navbar-burger burger" onclick="toggleBurger()" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
@@ -46,30 +46,30 @@
                   Home
                 </a>
           
-                <a class="navbar-item">
+                <a class="navbar-item" href="#about">
                   About
                 </a>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href="meetup.com">
                     Events
                   </a>
 
-                <a class="navbar-item">
-                    Social
-                  </a>
-              </div>
+            </div>
             </div>
           </nav>
 
           <div class="start">
-                <div><h1 class="big">Delhi hardware hackers club</h1></div>
+                <div><h1 class="big"> Delhi Hardware Hacker's Club</h1></div>
                 <div><p>Join Delhi-NCR's Coolest Electronic Enthusiasts</p></div>
                 <div class="social">
-                    <div class="fa fa-facebook-square"></div>
-                    <div class="fa fa-telegram"></div>
-                    <div class="fa fa-linkedin"></div>
-                    <div class="fa fa-instagram"></div>
+                    <a href="https://t.me/hhcdelhi"></a><div class="fa fa-telegram"></div> </a>
+                    <a href="https://twitter.com/HackersHhc"><div class="fa fa-twitter"></div> </a>
+                    <a href="https://github.com/hardware-hacker-club-delhi"><div class="fa fa-github"></div> </a>
                 </div>
+          </div>
+          <div id="about">
+            <h1 class="title">About Delhi Hardware Hacker's Club</h1>
+            <p>Delhi Hardware Hacker's Club is Delhi NCR a meetup of Systems engineers, Programmers and Hardware Engineers. Join us at the <a href="meetup.com"><u>next</u></a> meetup </p>
           </div>
           <p>
     </body>
