--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@
                 <div><h1 class="big"> Delhi Hardware Hacker's Club</h1></div>
                 <div><p>Join Delhi-NCR's Coolest Electronic Enthusiasts</p></div>
                 <div class="social">
-                    <a href="https://t.me/hhcdelhi"></a><div class="fa fa-telegram"></div> </a>
+                    <a href="https://t.me/hhcdelhi"><div class="fa fa-telegram"></div> </a>
                     <a href="https://twitter.com/HackersHhc"><div class="fa fa-twitter"></div> </a>
                     <a href="https://github.com/hardware-hacker-club-delhi"><div class="fa fa-github"></div> </a>
                 </div>
