--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
               <a class="navbar-item" href="#">
-                <img src="assets/hw_logo_png.png" >
+                <h4><b>Delhi Hardware Hacker's Club</b></h4>
               </a>
           
               <a role="button" class="navbar-burger burger" onclick="toggleBurger()" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -57,15 +57,17 @@
             </div>
             </div>
           </nav>
-
           <div class="start">
-                <div><h1 class="big"> Delhi Hardware Hacker's Club</h1></div>
-                <div><p>Join Delhi-NCR's Coolest Electronic Enthusiasts</p></div>
-                <div class="social">
-                    <a href="https://t.me/hhcdelhi"><div class="fa fa-telegram"></div> </a>
-                    <a href="https://twitter.com/HackersHhc"><div class="fa fa-twitter"></div> </a>
-                    <a href="https://github.com/hardware-hacker-club-delhi"><div class="fa fa-github"></div> </a>
-                </div>
+            <div class="start-banner">
+                <div class="logo-oo"></div>
+                  <div><h1 class="big"> Delhi Hardware Hacker's Club</h1></div>
+                  <div><p>Join Delhi-NCR's Coolest Electronic Enthusiasts</p></div>
+                  <div class="social">
+                      <a href="https://t.me/hhcdelhi"><div class="fa fa-telegram"></div> </a>
+                      <a href="https://twitter.com/HackersHhc"><div class="fa fa-twitter"></div> </a>
+                      <a href="https://github.com/hardware-hacker-club-delhi"><div class="fa fa-github"></div> </a>
+                  </div>
+            </div>
           </div>
           <div id="about">
             <h1 class="title">About Delhi Hardware Hacker's Club</h1>
